--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,9 @@ db_data/
 *.env.development.local
 *.env.test.local
 *.env.production.local
+secrets/
 
 # ---- System ----
 .DS_Store
 Thumbs.db
+
